--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Discord Bot that serves as an Wakfu helper",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "npm run build && node dist/index.js",
+    "build": "babel src -d dist",
     "test": "jest tests/**.test.js"
   },
   "keywords": [
@@ -16,7 +17,20 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.8.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "@babel/cli": "^7.11.5",
+    "@babel/core": "^7.11.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-jest": "^26.3.0",
     "jest": "^26.4.2"
   }
 }
