--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run build && node dist/index.js",
     "import:equipment": "npm run build && node dist/utils/importEquipment.js",
+    "identify:actions": "npm run build && node dist/utils/identifyActions.js",
     "build": "babel src -d dist",
     "lint": "eslint .",
     "test": "jest tests/**.test.js"
