--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Mark Kop",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "axios": "^0.20.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0"
