--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "axios": "^0.20.0",
+    "codecov": "^3.7.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0"
   },
