feat: party listing (#5)
* feat: initial party listing setup

* refac: get args and options and party command

* refac: test mocks

* feat: update/leave party, party reactions, some refacs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "identify": "npm run build && node dist/utils/identifyValues.js",
     "build": "babel src -d dist",
     "lint": "eslint .",
-    "test": "jest tests/**.test.js"
+    "test": "jest tests/"
   },
   "keywords": [
     "wakfu",
@@ -45,6 +45,7 @@
   },
   "jest": {
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "testEnvironment": "node"
   }
 }
