--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "corvo-astral",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A Discord Bot that serves as an Wakfu helper",
   "main": "dist/index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "import:equipment": "npm run build && node dist/utils/importEquipment.js",
-    "identify": "npm run build && node dist/utils/identifyValues.js",
     "build": "babel src -d dist",
     "lint": "eslint .",
-    "test": "jest tests/"
+    "test": "jest tests/ --runInBand"
   },
   "keywords": [
     "wakfu",
@@ -23,7 +21,8 @@
     "axios": "^0.20.0",
     "codecov": "^3.7.2",
     "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.10.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
