--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "codecov": "^3.7.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "puppeteer": "^5.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
