--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.10.5",
+    "node-cron": "^2.0.3",
     "puppeteer": "^5.3.1"
   },
   "devDependencies": {
