--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build && node dist/index.js",
     "build": "babel src -d dist",
     "lint": "eslint .",
-    "test": "jest tests/ --runInBand"
+    "test": "jest tests/ --runInBand",
+    "clean": "rm package-lock.json && rm -rf node_modules"
   },
   "keywords": [
     "wakfu",
