--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run build && node dist/index.js",
     "build": "babel src -d dist",
+    "import": "npm run build && node dist/importers",
     "lint": "eslint .",
     "test": "jest tests/ --runInBand",
     "clean": "rm package-lock.json && rm -rf node_modules"
