--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "codecov": "^3.7.2",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "mongoose": "^5.10.5",
     "node-cron": "^2.0.3",
-    "puppeteer": "^5.3.1"
+    "puppeteer": "^5.5.0",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
