feat: add slash commands (#51)
* feat: add slash commands for about, alma and calc

* feat: add slash command for config command

* feat: add slash commands to party create and update

* feat: add slash command to equip command

* fix: register slash commands after getting configs

* feat: add slash command to recipe

* feat: add slash command to subli and make embed size dynamic

* refac: add reusable lang and translate options

* fix: rarity conditional

* feat: add slash command to help command

* feat: add pre defined language options

* feat: add pre-defined rarity options

* fix: use string for res option on calc command

* refac: break lines on registerCommand functions params

* feat: migrate discord mocking to discord.js v13

* fix: change ts-jest/utils to ts-jest

* feat: refactor calc command with new test utils methods

* refac: about command test

* fix: parse commands with spaces in arguments

* feat: migrate equip command test

* feat: migrate recipe test command

* feat: migrate subli command test

* refac: add ":" support on getParsedCommand

* feat: migrate party create command

* fix: commands spacing on test strings and fetchReply

* feat: migrate party update tests

* feat: migrate partyReaction test

* fix: subli testing

* feat: add deprecated command messahe

* fix: help messages examples

* fix: remove unused code

* fix: update onMessage event trigger

* feat: change deployment to use node 16

* fix: partyCreate import path

* feat: migrate bot activity message

* feat: register commands on guild join

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,7 +2,7 @@ name: Build - Test - Deploy (Staging)
 
 on:
   push:
-    branches: [ staging ]
+    branches: [ feat/slash-commands ]
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16.13]
 
     steps:
     - uses: actions/checkout@v2
