--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "corvo-astral",
   "version": "2.0.0",
   "description": "A Discord Bot that serves as an Wakfu helper",
-  "engines" : { 
-    "node" : ">=12.22.4" 
+  "engines": {
+    "node": ">=16.13.2"
   },
   "main": "dist/bot.js",
   "scripts": {
@@ -24,9 +24,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "@discordjs/rest": "^0.3.0",
     "axios": "^0.21.1",
     "codecov": "^3.7.2",
-    "discord.js": "^12.3.1",
+    "discord.js": "^13.6.0",
     "dotenv": "^8.4.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
@@ -35,7 +36,7 @@
     "puppeteer": "^5.5.0",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.5",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
@@ -43,11 +44,11 @@
     "@babel/node": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.1.3",
     "@types/node": "^14.17.4",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^27",
     "eslint": "^7.8.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-jsdoc": "^9.3.0",
@@ -57,8 +58,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^27.0.0",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.1.0"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0"
   },
   "_moduleAliases": {
     "@types": "dist/types.js",
