--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@discordjs/rest": "^0.3.0",
+    "@discordjs/rest": "0.3.0",
     "axios": "^0.21.1",
     "codecov": "^3.7.2",
-    "discord.js": "^13.6.0",
+    "discord.js": "13.6.0",
     "dotenv": "^8.4.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
