feat: add wakfu version to all commands

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-# After Heroku depreciation, this app is being deployed on Koyeb
+# After Heroku depreciation, this app is being elsewhere
 # name: Production Deploy
 
 # on:
