--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "esModuleInterop" : true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "dist",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": "src/",
     "paths": {
       "@types": ["types.ts"],
